# pycmor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yaml  CITATION.cff  Dockerfile.test  QUICK_START_CMIP7.md  README.rst  ROADMAP.rst  codecov.yml  conftest.py  output.json  pyproject.toml  pytest.ini  setup.cfg  setup.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: CI-test.yaml
assets/: Pycmor.ai  PycmorSquare.ai
blog/: infer_frequency.ipynb  infer_frequency.md
doc/: cmip7_configuration.rst  cmip7_controlled_vocabularies.rst  cmip7_interface.rst  conf.py  cookbook.rst  coordinate_attributes.rst  coordinate_bounds.rst  developer_guide.rst  dimension_mapping.rst  including_subcommand_plugins.rst  index.rst  installation.rst  netcdf_chunking.rst  pycmor_aux_files.rst  pycmor_building_blocks.rst  pycmor_cli.rst  pycmor_saving_output.rst  quickstart.rst  table_explorer.rst
docs/: logging.md
examples/: chunking_example.yaml  cmip7-example.yaml  vertical_bounds_example.py
examples/00-testing-example/: sample.yaml
examples/01-default-unit-conversion/: cleanup.py  download-example-data.sh  pycmor.slurm  units-example.yaml
examples/02-upward-ocean-mass-transport/: README.rst  cleanup.py  wo_cellarea.yaml
examples/03-incorrect-units-in-source-files/: download-example-data.sh  incorrect_units.yaml
examples/04-multivariable-input-with-vertical-integration/: download-example-data.sh  (+1 more)
src/pycmor/: cli.py  (+2 more)
utils/: generate_test_stubs.py  rename_to_pycmor.py  run-pytest-on-levante.slurm
(+88 files in other folders)
