[build-system]
requires = [
    "setuptools<69",
    "wheel",
    "versioneer",
]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
name = "pycmor"
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"

[tool.pixi.pypi-dependencies]
pycmor = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pip = ">=25.2,<26"
